Formatting and warnings